tests/ui/linkage-attr/linkage-attr-mutable-static.stderr
error: mutable statics are not allowed with `#[linkage]`
  --> $DIR/linkage-attr-mutable-static.rs:8:9
   |
LL |         #[linkage = "weak"]
   |         ^^^^^^^^^^^^^^^^^^^
   |
   = note: making the static mutable would allow changing which symbol the static references rather than make the target of the symbol mutable

error: aborting due to 1 previous error

